# ai

./: pyproject.toml
scripts/: bootstrap.sh
src/ai/: argument_parser.py  configuration.py  network.py  parse_arguments.py
tests/: test_parse_arguments.py
