[project]
name = "ai"
version = "0.1.0"
description = ""
authors = [
    {name = "jlye",email = "justinmlye@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "gymnasium[accept-rom-license,atari,box2d] (>=1.1.1,<2.0.0)",
    "torch (>=2.7.0,<3.0.0)",
    "torchvision (>=0.22.0,<0.23.0)"
]

[tool.poetry]
packages = [{include = "ai", from = "src"}]


[[tool.poetry.source]]
name = "pytorch-gpu"
url = "https://download.pytorch.org/whl/rocm6.3/"
priority = "explicit"


[tool.poetry.dependencies]

[tool.poetry.group.test.dependencies]
pytest = "^8.4.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
